@@ -76,6 +76,9 @@
     <h2 id="h2_id" class="h2_class" name="h2_name">h2's are cool</h2>
     <h3 id="h3_id" class="h3_class" name="h3_name">h3's are cool</h3>
     <h4 id="h4_id" class="h4_class" name="h4_name">h4's are cool</h4>
+    <h5 id="h5_id" class="h5_class" name="h5_name">h5's are cool</h5>
+    <h6 id="h6_id" class="h6_class" name="h6_name">h6's are cool</h6>
+
     <a href="success.html" target="_blank">New Window</a>
 
   </body>
